fixing ui bug on mobile device

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -754,6 +754,10 @@ video {
   padding-top: 5px;
   padding-bottom: 5px;
 }
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
 .pb-2 {
   padding-bottom: 0.5rem;
 }
